--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adam",
-  "description": "Functions to create and process objects",
+  "description": "Functions to create, process and test objects",
   "version": "0.1.0",
   "homepage": "https://github.com/gamtiq/adam",
   "author": {
