Add several methods
The following methods are added: remove, empty, reverse, transform,
copy, change, map.
0 is added as empty value for isEmpty.

--- a/bower.json
+++ b/bower.json
@@ -14,11 +14,21 @@
     "object",
     "process",
     "create",
+    "check",
     "field",
     "value",
+    "type",
+    "kind",
     "size",
     "split",
-    "filter"
+    "filter",
+    "copy",
+    "change",
+    "map",
+    "remove",
+    "reverse",
+    "empty",
+    "transform"
   ],
   "license": "MIT",
   "ignore": [
