--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "grunt-mocha-cli": ">=1.3.0",
     "grunt-contrib-clean": ">=0.5.0",
     "grunt-contrib-uglify": ">=0.2.7",
-    "grunt-umd": ">=1.7.3",
+    "grunt-umd": "~1.7.3",
     "grunt-jsdoc": ">=0.4.2",
     "matchdep": ">=0.3.0",
-    "grunt-push-release": ">=0.1.8"
+    "grunt-push-release": ">=0.1.8",
+    "ink-docstrap": "^1.1.0"
   },
   "keywords": [
     "object",
