Refactor getSize and isSizeMore
Change implementation of getSize and isSizeMore to consider symbol
property keys, add limit setting for getFields

--- a/bower.json
+++ b/bower.json
@@ -16,19 +16,24 @@
     "create",
     "check",
     "field",
+    "key",
+    "property",
+    "symbol",
     "value",
     "type",
     "kind",
     "size",
     "split",
     "filter",
+    "select",
     "copy",
     "change",
     "map",
     "remove",
     "reverse",
     "empty",
-    "transform"
+    "transform",
+    "test"
   ],
   "license": "MIT",
   "ignore": [
