--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "grunt-jsdoc": ">=0.4.2",
     "matchdep": ">=0.3.0",
     "grunt-push-release": ">=0.1.8",
-    "ink-docstrap": "^1.1.0"
+    "ink-docstrap": "^1.1.4"
   },
   "keywords": [
     "object",
@@ -44,19 +44,24 @@
     "create",
     "check",
     "field",
+    "key",
+    "property",
+    "symbol",
     "value",
     "type",
     "kind",
     "size",
     "split",
     "filter",
+    "select",
     "copy",
     "change",
     "map",
     "remove",
     "reverse",
     "empty",
-    "transform"
+    "transform",
+    "test"
   ],
   "jam": {
     "main": "dist/adam.js",
