--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt": ">=0.4.2",
+    "grunt": "~0.4.2",
     "grunt-contrib-jshint": ">=0.7.2",
     "grunt-mocha-cli": ">=1.3.0",
     "grunt-contrib-clean": ">=0.5.0",
