--- a/package.json
+++ b/package.json
@@ -21,22 +21,22 @@
   ],
   "main": "src/adam.js",
   "engines": {
-    "node": ">= 0.10.0"
+    "node": ">= 10.0"
   },
   "scripts": {
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-jshint": ">=0.7.2",
-    "grunt-mocha-cli": ">=1.3.0",
-    "grunt-contrib-clean": ">=0.5.0",
-    "grunt-contrib-uglify": ">=0.2.7",
-    "grunt-umd": "~1.7.3",
-    "grunt-jsdoc": ">=0.4.2",
-    "matchdep": ">=0.3.0",
-    "grunt-push-release": ">=0.1.8",
-    "ink-docstrap": "^1.1.4"
+    "grunt": "1.1.0",
+    "grunt-bump": "0.8.0",
+    "grunt-contrib-clean": "2.0.0",
+    "grunt-contrib-jshint": "2.1.0",
+    "grunt-contrib-uglify": "4.0.1",
+    "grunt-jsdoc": "2.4.1",
+    "grunt-mocha-cli": "6.0.0",
+    "grunt-umd": "3.0.0",
+    "ink-docstrap": "1.3.2",
+    "matchdep": "2.0.0"
   },
   "keywords": [
     "object",
@@ -62,17 +62,5 @@
     "empty",
     "transform",
     "test"
-  ],
-  "jam": {
-    "main": "dist/adam.js",
-    "include": [
-      "dist",
-      "doc",
-      "README.md"
-    ]
-  },
-  "categories": [
-    "Data",
-    "Utilities"
   ]
 }
