--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
 language: node_js
 node_js:
-  - "stable"
-  - "4.4"
-  - "0.12"
-  - "0.10"
+  - "node"
 before_script:
   - npm install -g grunt-cli
 script: "grunt travis"
