--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "test": "grunt test"
   },
   "devDependencies": {
+    "docdash": "^1.2.0",
     "grunt": "1.1.0",
     "grunt-bump": "0.8.0",
     "grunt-contrib-clean": "2.0.0",
@@ -35,7 +36,7 @@
     "grunt-jsdoc": "2.4.1",
     "grunt-mocha-cli": "6.0.0",
     "grunt-umd": "3.0.0",
-    "ink-docstrap": "1.3.2",
+    "jsdoc-file": "^1.0.0",
     "matchdep": "2.0.0"
   },
   "keywords": [
