--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "adam",
   "description": "Functions to create, process and test objects",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "homepage": "https://github.com/gamtiq/adam",
   "author": {
     "name": "Denis Sikuler"
@@ -63,6 +63,9 @@
     "reverse",
     "empty",
     "transform",
-    "test"
+    "test",
+    "util",
+    "utility",
+    "library"
   ]
 }
