--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
     "dist/adam.js", 
     "dist/adam.min.js"
   ],
-  "version": "1.1.0",
+  "version": "1.2.0",
   "homepage": "https://github.com/gamtiq/adam",
   "authors": [
     "Denis Sikuler"
@@ -34,7 +34,10 @@
     "reverse",
     "empty",
     "transform",
-    "test"
+    "test",
+    "util",
+    "utility",
+    "library"
   ],
   "license": "MIT",
   "ignore": [
