--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "adam",
-  "description": "Functions to create, process and test objects",
-  "version": "1.2.1",
+  "description": "Functions to create, process and test objects, maps, arrays, sets",
+  "version": "1.3.0",
   "homepage": "https://github.com/gamtiq/adam",
   "author": {
     "name": "Denis Sikuler"
@@ -36,11 +36,12 @@
     "grunt-jsdoc": "2.4.1",
     "grunt-mocha-cli": "6.0.0",
     "grunt-umd": "3.0.0",
-    "jsdoc-file": "^1.0.0",
+    "jsdoc-file": "^1.0.1",
     "matchdep": "2.0.0"
   },
   "keywords": [
     "object",
+    "array",
     "process",
     "create",
     "check",
@@ -53,6 +54,7 @@
     "kind",
     "size",
     "split",
+    "divide",
     "filter",
     "select",
     "find",
